# video-transcriber-app

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  app.py  app_working.py  cli_app.py  docker-compose.yml  flask_app.py  mkdocs.yml  phi3_brain.py  project.yaml  pyproject.toml  requirements.txt  simple_server.py  streamlit_app.py  test_integration.py  transcriber.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
data/samples/: 1753613400_Screen_Recording_2025-07-26_at_11.22.03.mov.srt
docs/: index.md
scripts/: Utils.ps1  _utils.sh  add_spdx_header.py  bootstrap  bootstrap.ps1  build  build.ps1  check  check.ps1  clean  clean.ps1  coverage  coverage.ps1  dev  dev.ps1  e2e  e2e.ps1  fmt  fmt.ps1  gen-docs  gen-docs.ps1  lint  lint.ps1  migrate  migrate.ps1  package  package.ps1  release  release.ps1  sbom  sbom.ps1  security-scan  security-scan.ps1  test  test.ps1  typecheck  typecheck.ps1  update-deps  update-deps.ps1
src/video_transcriber_app/: __init__.py  cli_app.py  phi3_brain.py  transcriber.py
src/video_transcriber_app/web/: app_working.py  basic_streamlit_app.py  flask_app.py  simple_server.py  streamlit_app.py
src/video_transcriber_app/web/templates/: index.html
tests/integration/: test_cli_display.py
tests/unit/: test_package_imports.py
